RESOLVED FIXED295038
[WGSL] Type checker should exit after encountering the first error
https://bugs.webkit.org/show_bug.cgi?id=295038
Summary [WGSL] Type checker should exit after encountering the first error
Tadeu Zagallo
Reported 2025-06-26 10:02:51 PDT
...
Attachments
Radar WebKit Bug Importer
Comment 1 2025-06-26 10:03:30 PDT
Tadeu Zagallo
Comment 2 2025-06-26 10:07:46 PDT
EWS
Comment 3 2025-06-30 08:27:17 PDT
Committed 296795@main (ffb2fe10b66b): <https://commits.webkit.org/296795@main> Reviewed commits have been landed. Closing PR #47246 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.